--- a/P009358.opf/layers/v001/Pagination.yml
+++ b/P009358.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 88df8cafc58d4ea78d30619bb2b129b6
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ef30efe4701342658075fb2dc5143674:
